# ile-ai

./: main.py  pyproject.toml
.github/workflows/: ci.yml
ile/: extractor.py  main.py  schemas.py  ui.py
tests/: test_extractor.py
