[project]
name = "ile-ai"
version = "0.1.0"
description = "Is Life Expensive AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.73.0",
    "pypdf2>=3.0.1",
    "typer>=0.15.2",
]

[project.scripts]
ile = "ile.main:app"

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "PL", "RUF"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E501", "PLR2004"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ile --cov-report=term-missing"
