[project]
name = "ile-ai"
version = "0.1.0"
description = "Is Life Expensive AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.73.0",
    "pydantic-ai-slim[openai]>=0.1.3",
    "pypdf2>=3.0.1",
    "typer>=0.15.2",
]

[project.scripts]
ile = "ile.main:app"

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["E", "F", "I", "N", "W", "B", "C4", "UP", "PL", "RUF"]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["E501", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ile --cov-report=term-missing"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
